@@ -1,5 +1,5 @@
 Libidn AUTHORS -- Information about the authors.
-Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007 Simon Josefsson
+Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007, 2008 Simon Josefsson
 See the end for copying conditions.
 
 Simon Josefsson <simon@josefsson.org>
@@ -13,6 +13,9 @@ Contributed Java implementation.
 
 Alexander Gnauck <gnauck@ag-software.de>
 Contributed C# port.
+
+Adam Strzelecki <ono@java.pl>
+Contributed Windows Visual Studio project files.
 
 -----BEGIN PGP PUBLIC KEY BLOCK-----
 URL: http://josefsson.org/key.txt
