@@ -81,6 +81,7 @@ Christian Ehrlicher
 Remko van der Vossen
 Erik van der Poel
 Mike Frysinger
+Adam Strzelecki
 
 ----------------------------------------------------------------------
 Copying and distribution of this file, with or without modification,
