@@ -1,0 +1,20 @@
+﻿
+Microsoft Visual Studio Solution File, Format Version 9.00
+# Visual Studio 2005
+Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "libidn", "libidn.vcproj", "{0B883079-812A-405E-AC8F-59F47CE9A3FF}"
+EndProject
+Global
+	GlobalSection(SolutionConfigurationPlatforms) = preSolution
+		Debug|Win32 = Debug|Win32
+		Release|Win32 = Release|Win32
+	EndGlobalSection
+	GlobalSection(ProjectConfigurationPlatforms) = postSolution
+		{0B883079-812A-405E-AC8F-59F47CE9A3FF}.Debug|Win32.ActiveCfg = Debug|Win32
+		{0B883079-812A-405E-AC8F-59F47CE9A3FF}.Debug|Win32.Build.0 = Debug|Win32
+		{0B883079-812A-405E-AC8F-59F47CE9A3FF}.Release|Win32.ActiveCfg = Release|Win32
+		{0B883079-812A-405E-AC8F-59F47CE9A3FF}.Release|Win32.Build.0 = Release|Win32
+	EndGlobalSection
+	GlobalSection(SolutionProperties) = preSolution
+		HideSolutionNode = FALSE
+	EndGlobalSection
+EndGlobal
