@@ -1,0 +1,306 @@
+<?xml version="1.0" encoding="windows-1250"?>
+<VisualStudioProject
+	ProjectType="Visual C++"
+	Version="8,00"
+	Name="libidn"
+	ProjectGUID="{0B883079-812A-405E-AC8F-59F47CE9A3FF}"
+	RootNamespace="libidn"
+	Keyword="Win32Proj"
+	>
+	<Platforms>
+		<Platform
+			Name="Win32"
+		/>
+	</Platforms>
+	<ToolFiles>
+	</ToolFiles>
+	<Configurations>
+		<Configuration
+			Name="Debug|Win32"
+			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
+			IntermediateDirectory="$(ConfigurationName)"
+			ConfigurationType="2"
+			CharacterSet="2"
+			>
+			<Tool
+				Name="VCPreBuildEventTool"
+				Description="Generating tables &amp; includes..."
+				CommandLine="if not exist include\config.h call perl include\gen-win32-headers.pl ..\configure.ac ..\lib\stringprep.h.in &gt; ..\lib\stringprep.h&#x0D;&#x0A;if not exist include\config.h call perl include\gen-win32-headers.pl ..\configure.ac &gt; include\config.h&#x0D;&#x0A;cd ..\lib&#x0D;&#x0A;if not exist stringprep.h call perl ..\win32\include\gen-win32-headers.pl ..\configure.ac stringprep.h.in &gt; stringprep.h&#x0D;&#x0A;if not exist rfc3454.c call perl gen-stringprep-tables.pl ..\doc\specifications\rfc3454.txt&#x0D;&#x0A;if not exist tlds.c call perl -MWild -I..\win32\include gen-tld-tables.pl ..\doc\tld\*.tld &gt; tlds.c&#x0D;&#x0A;if not exist gunidecomp.h call perl gen-unicode-tables.pl -decomp 3.2 ..\doc\specifications"
+			/>
+			<Tool
+				Name="VCCustomBuildTool"
+			/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"
+			/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"
+			/>
+			<Tool
+				Name="VCMIDLTool"
+			/>
+			<Tool
+				Name="VCCLCompilerTool"
+				Optimization="0"
+				AdditionalIncludeDirectories="include;../lib;../lib/gl"
+				PreprocessorDefinitions="WIN32;_DEBUG;_USRDLL;LIBIDN_EXPORTS;HAVE_CONFIG_H;_CRT_SECURE_NO_DEPRECATE;_CRT_NONSTDC_NO_DEPRECATE"
+				MinimalRebuild="true"
+				BasicRuntimeChecks="3"
+				RuntimeLibrary="3"
+				UsePrecompiledHeader="0"
+				WarningLevel="3"
+				Detect64BitPortabilityProblems="true"
+				DebugInformationFormat="4"
+			/>
+			<Tool
+				Name="VCManagedResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCPreLinkEventTool"
+			/>
+			<Tool
+				Name="VCLinkerTool"
+				OutputFile="lib/debug/$(ProjectName).dll"
+				GenerateDebugInformation="true"
+				ImportLibrary="lib/debug/$(TargetName).lib"
+			/>
+			<Tool
+				Name="VCALinkTool"
+			/>
+			<Tool
+				Name="VCManifestTool"
+			/>
+			<Tool
+				Name="VCXDCMakeTool"
+			/>
+			<Tool
+				Name="VCBscMakeTool"
+			/>
+			<Tool
+				Name="VCFxCopTool"
+			/>
+			<Tool
+				Name="VCAppVerifierTool"
+			/>
+			<Tool
+				Name="VCWebDeploymentTool"
+			/>
+			<Tool
+				Name="VCPostBuildEventTool"
+			/>
+		</Configuration>
+		<Configuration
+			Name="Release|Win32"
+			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
+			IntermediateDirectory="$(ConfigurationName)"
+			ConfigurationType="2"
+			CharacterSet="2"
+			WholeProgramOptimization="1"
+			>
+			<Tool
+				Name="VCPreBuildEventTool"
+				Description="Generating tables &amp; includes..."
+				CommandLine="if not exist include\config.h call perl include\gen-win32-headers.pl ..\configure.ac ..\lib\stringprep.h.in &gt; ..\lib\stringprep.h&#x0D;&#x0A;if not exist include\config.h call perl include\gen-win32-headers.pl ..\configure.ac &gt; include\config.h&#x0D;&#x0A;cd ..\lib&#x0D;&#x0A;if not exist stringprep.h call perl ..\win32\include\gen-win32-headers.pl ..\configure.ac stringprep.h.in &gt; stringprep.h&#x0D;&#x0A;if not exist rfc3454.c call perl gen-stringprep-tables.pl ..\doc\specifications\rfc3454.txt&#x0D;&#x0A;if not exist tlds.c call perl -MWild -I..\win32\include gen-tld-tables.pl ..\doc\tld\*.tld &gt; tlds.c&#x0D;&#x0A;if not exist gunidecomp.h call perl gen-unicode-tables.pl -decomp 3.2 ..\doc\specifications"
+			/>
+			<Tool
+				Name="VCCustomBuildTool"
+			/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"
+			/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"
+			/>
+			<Tool
+				Name="VCMIDLTool"
+			/>
+			<Tool
+				Name="VCCLCompilerTool"
+				AdditionalIncludeDirectories="include;../lib;../lib/gl"
+				PreprocessorDefinitions="WIN32;NDEBUG;_USRDLL;LIBIDN_EXPORTS;HAVE_CONFIG_H;_CRT_SECURE_NO_DEPRECATE;_CRT_NONSTDC_NO_DEPRECATE"
+				RuntimeLibrary="2"
+				UsePrecompiledHeader="0"
+				WarningLevel="3"
+				Detect64BitPortabilityProblems="true"
+				DebugInformationFormat="3"
+			/>
+			<Tool
+				Name="VCManagedResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCPreLinkEventTool"
+			/>
+			<Tool
+				Name="VCLinkerTool"
+				OutputFile="lib/$(ProjectName).dll"
+				ImportLibrary="lib/$(TargetName).lib"
+			/>
+			<Tool
+				Name="VCALinkTool"
+			/>
+			<Tool
+				Name="VCManifestTool"
+			/>
+			<Tool
+				Name="VCXDCMakeTool"
+			/>
+			<Tool
+				Name="VCBscMakeTool"
+			/>
+			<Tool
+				Name="VCFxCopTool"
+			/>
+			<Tool
+				Name="VCAppVerifierTool"
+			/>
+			<Tool
+				Name="VCWebDeploymentTool"
+			/>
+			<Tool
+				Name="VCPostBuildEventTool"
+			/>
+		</Configuration>
+	</Configurations>
+	<References>
+	</References>
+	<Files>
+		<Filter
+			Name="Source Files"
+			Filter="cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx"
+			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
+			>
+			<File
+				RelativePath="..\lib\gl\c-ctype.c"
+				>
+			</File>
+			<File
+				RelativePath="..\lib\gl\c-strcasecmp.c"
+				>
+			</File>
+			<File
+				RelativePath="..\lib\gl\c-strncasecmp.c"
+				>
+			</File>
+			<File
+				RelativePath="..\lib\idn-free.c"
+				>
+			</File>
+			<File
+				RelativePath="..\lib\idna.c"
+				>
+			</File>
+			<File
+				RelativePath="..\lib\nfkc.c"
+				>
+			</File>
+			<File
+				RelativePath="..\lib\pr29.c"
+				>
+			</File>
+			<File
+				RelativePath="..\lib\profiles.c"
+				>
+			</File>
+			<File
+				RelativePath="..\lib\punycode.c"
+				>
+			</File>
+			<File
+				RelativePath="..\lib\rfc3454.c"
+				>
+			</File>
+			<File
+				RelativePath="..\lib\strerror-idna.c"
+				>
+			</File>
+			<File
+				RelativePath="..\lib\strerror-pr29.c"
+				>
+			</File>
+			<File
+				RelativePath="..\lib\strerror-punycode.c"
+				>
+			</File>
+			<File
+				RelativePath="..\lib\strerror-stringprep.c"
+				>
+			</File>
+			<File
+				RelativePath="..\lib\strerror-tld.c"
+				>
+			</File>
+			<File
+				RelativePath="..\lib\gl\striconv.c"
+				>
+			</File>
+			<File
+				RelativePath="..\lib\stringprep.c"
+				>
+			</File>
+			<File
+				RelativePath="..\lib\gl\strverscmp.c"
+				>
+			</File>
+			<File
+				RelativePath="..\lib\tld.c"
+				>
+			</File>
+			<File
+				RelativePath="..\lib\tlds.c"
+				>
+			</File>
+			<File
+				RelativePath="..\lib\toutf8.c"
+				>
+			</File>
+			<File
+				RelativePath="..\lib\version.c"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="Header Files"
+			Filter="h;hpp;hxx;hm;inl;inc;xsd"
+			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
+			>
+			<File
+				RelativePath=".\include\ac-stdint.h"
+				>
+			</File>
+			<File
+				RelativePath=".\include\config.h"
+				>
+			</File>
+			<File
+				RelativePath=".\include\idn-int.h"
+				>
+			</File>
+			<File
+				RelativePath=".\include\stdbool.h"
+				>
+			</File>
+			<File
+				RelativePath="..\lib\stringprep.h"
+				>
+			</File>
+			<File
+				RelativePath=".\include\unistd.h"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="Resource Files"
+			Filter="rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav"
+			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}"
+			>
+		</Filter>
+	</Files>
+	<Globals>
+	</Globals>
+</VisualStudioProject>
